--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
   "require": {
     "php": ">=5.5",
     "quiqqer/quiqqer": "*@dev",
-    "abraham/twitteroauth": ">=0.6",
-    "mremi/url-shortener": "1.*"
+    "abraham/twitteroauth": "1.*"
   },
   "autoload": {
     "psr-0": {
