refactor: updated composer.json

--- a/composer.json
+++ b/composer.json
@@ -2,19 +2,25 @@
   "name": "quiqqer/twitter",
   "type": "quiqqer-plugin",
   "description": "Twitter for QUIQQER",
-  "version": "dev-master",
+  "version": "dev-dev",
   "license": "",
   "authors": [
     {
       "name": "Henning Leutz",
       "email": "leutz@pcsg.de",
-      "homepage": "http://www.pcsg.de",
+      "homepage": "https://www.pcsg.de",
+      "role": "Developer"
+    },
+    {
+      "name": "Jan Wennrich",
+      "email": "info@pcsg.de",
+      "homepage": "https://www.pcsg.de",
       "role": "Developer"
     }
   ],
   "support": {
     "email": "support@pcsg.de",
-    "url": "http://www.pcsg.de"
+    "url": "https://www.pcsg.de"
   },
   "require": {
     "php": ">=5.5",
