--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "quiqqer/twitter",
   "type": "quiqqer-plugin",
   "description": "Twitter for QUIQQER",
-  "version": "dev-dev",
+  "version": "dev-master",
   "license": "",
   "authors": [
     {
