--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "type": "quiqqer-plugin",
   "description": "Twitter connection, to access the Twitter-API from your QUIQQER-system.",
   "version": "dev-dev",
-  "license": "MIT",
+  "license": "GPL-3.0+",
   "authors": [
     {
       "name": "Henning Leutz",
