--- a/package.xml
+++ b/package.xml
@@ -22,5 +22,10 @@
             <name><![CDATA[PCSG - Computer & Internet Service OHG]]></name>
             <license><![CDATA[GPL-3.0+]]></license>
         </copyright>
+
+        <languages>
+            <language>de</language>
+            <language>en</language>
+        </languages>
     </package>
 </quiqqer>
