--- a/composer.json
+++ b/composer.json
@@ -1,35 +1,34 @@
 {
-  "name": "quiqqer/twitter",
-  "type": "quiqqer-plugin",
-  "description": "Twitter connection, to access the Twitter-API from your QUIQQER-system.",
-  "version": "dev-dev",
-  "license": "GPL-3.0+",
-  "authors": [
-    {
-      "name": "Henning Leutz",
-      "email": "leutz@pcsg.de",
-      "homepage": "https://www.pcsg.de",
-      "role": "Developer"
+    "name": "quiqqer\/twitter",
+    "type": "quiqqer-plugin",
+    "description": "Twitter connection, to access the Twitter-API from your QUIQQER-system.",
+    "license": "GPL-3.0+",
+    "authors": [
+        {
+            "name": "Henning Leutz",
+            "email": "leutz@pcsg.de",
+            "homepage": "https:\/\/www.pcsg.de",
+            "role": "Developer"
+        },
+        {
+            "name": "Jan Wennrich",
+            "email": "info@pcsg.de",
+            "homepage": "https:\/\/www.pcsg.de",
+            "role": "Developer"
+        }
+    ],
+    "support": {
+        "email": "support@pcsg.de",
+        "url": "https:\/\/www.pcsg.de"
     },
-    {
-      "name": "Jan Wennrich",
-      "email": "info@pcsg.de",
-      "homepage": "https://www.pcsg.de",
-      "role": "Developer"
+    "require": {
+        "php": ">=5.5",
+        "quiqqer\/quiqqer": "*@dev",
+        "abraham\/twitteroauth": "1.*"
+    },
+    "autoload": {
+        "psr-4": {
+            "QUI\\Twitter\\": "src\/QUI\/Twitter"
+        }
     }
-  ],
-  "support": {
-    "email": "support@pcsg.de",
-    "url": "https://www.pcsg.de"
-  },
-  "require": {
-    "php": ">=5.5",
-    "quiqqer/quiqqer": "*@dev",
-    "abraham/twitteroauth": "1.*"
-  },
-  "autoload": {
-    "psr-4": {
-      "QUI\\Twitter\\": "src\/QUI\/Twitter"
-    }
-  }
 }
